--- a/Public/css/QLNV.css
+++ b/Public/css/QLNV.css
@@ -222,12 +222,57 @@ body {
   border-bottom: 1px solid rgba(15, 23, 42, 0.08);
 }
 
+.employee-table th:nth-child(1) {
+  width: 25%;
+  text-align: left;
+}
+
+.employee-table th:nth-child(2) {
+  width: 20%;
+  text-align: left;
+}
+
+.employee-table th:nth-child(3) {
+  width: 18%;
+  text-align: left;
+}
+
+.employee-table th:nth-child(4) {
+  width: 15%;
+  text-align: center;
+}
+
+.employee-table th:nth-child(5) {
+  width: 22%;
+  text-align: center;
+}
+
 .employee-table td {
   padding: 18px;
   font-size: 15px;
   color: #1f2a37;
   border-bottom: 1px solid rgba(15, 23, 42, 0.06);
   vertical-align: middle;
+}
+
+.employee-table td:nth-child(1) {
+  text-align: left;
+}
+
+.employee-table td:nth-child(2) {
+  text-align: left;
+}
+
+.employee-table td:nth-child(3) {
+  text-align: left;
+}
+
+.employee-table td:nth-child(4) {
+  text-align: center;
+}
+
+.employee-table td:nth-child(5) {
+  text-align: center;
 }
 
 .employee-table tbody tr:hover {
